api: refactor
wip
